--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "dependencies": {
-    "@rails/webpacker": "5.4.4",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
-  },
   "devDependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "webpack-dev-server": "^3"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@rails/webpacker": "5.4.4",
+    "bootstrap": "^5.3.3",
+    "chokidar": "^3.6.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "jquery": "^3.6.0"
   }
 }
