--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@popperjs/core": "^2.11.8",
     "@rails/webpacker": "5.4.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "chokidar": "^3.6.0",
+    "jquery": "^3.6.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "jquery": "^3.6.0"
+    "webpack-cli": "^3.3.12"
   }
 }
