--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.11.3",
     "chokidar": "^3.6.0",
     "jquery": "^3.6.0",
+    "toastr": "^2.1.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   }
