--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chokidar": "^3.6.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "toastr": "^2.1.4",
     "webpack": "^4.46.0",
