--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "@babel/preset-react": "^7.24.7",
     "@rails/webpacker": "5.4.4",
+    "@react-oauth/google": "^0.12.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
