--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -31,7 +31,7 @@ development:
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: todo_list
+  #username: example
 
   # The password associated with the PostgreSQL role (username).
   #password:
@@ -84,5 +84,5 @@ test:
 production:
   <<: *default
   database: example_production
-  username: example
+  username: example_test
   password: <%= ENV["EXAMPLE_DATABASE_PASSWORD"] %>
