--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -25,13 +25,13 @@ default: &default
 
 development:
   <<: *default
-  database: example_development
+  database: todo-list_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: example
+  #username: todo_list
 
   # The password associated with the PostgreSQL role (username).
   #password:
@@ -59,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: example_test
+  database: todo-list_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: example_production
-  username: example_test
-  password: <%= ENV["EXAMPLE_DATABASE_PASSWORD"] %>
+  database: todo-list_production
+  username: todo_list
+  password: <%= ENV["TODO_LIST_DATABASE_PASSWORD"] %>
