--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 credentials.yml.enc
+
+# Ignore information database
 database.yml
+
+# Ignore results spec
+.framgia-ci-reposrts
+.coverage
