--- a/client/package.json
+++ b/client/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "client",
+  "name": "@core/core-Conference-room-booking-management-system",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": ".",
+  "bugs": {
+    "url": "https://github.com/DTCLC4/Conference-room-booking-management-system/issues",
+    "email": "thi884641@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DTCLC4/Conference-room-booking-management-system"
+  },
+  "license": "MIT",
+  "author": "The DTCLC4 team (https://github.com/DTCLC4)",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint \"src/**/*.js\"",
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
-    "bootstrap": "^5.0.1",
-    "bootstrap-icons": "^1.11.3",
+    "@coreui/coreui": "^5.1.2",
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.3.0",
+    "@coreui/react": "5.3.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "classnames": "^2.5.1",
+    "core-js": "^3.38.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.26.2"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -28,6 +44,9 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "postcss": "8.4.47",
+    "prettier": "3.3.3",
+    "sass": "1.79.1",
     "vite": "^5.4.1"
   }
 }
