--- a/client/package.json
+++ b/client/package.json
@@ -26,12 +26,14 @@
     "@coreui/icons-react": "^2.3.0",
     "@coreui/react": "5.3.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@coreui/react-chartjs": "3.0.0",
     "classnames": "^2.5.1",
     "core-js": "^3.38.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "6.26.2",
     "redux": "^5.0.1"
   },
   "devDependencies": {
