--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@core/core-Conference-room-booking-management-system",
+  "name": "@core/core-conference-room-booking-management-system",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": ".",
   "bugs": {
     "url": "https://github.com/DTCLC4/Conference-room-booking-management-system/issues",
     "email": "thi884641@gmail.com"
@@ -15,10 +14,10 @@
   "license": "MIT",
   "author": "The DTCLC4 team (https://github.com/DTCLC4)",
   "scripts": {
-    "build": "vite build",
-    "lint": "eslint \"src/**/*.js\"",
-    "preview": "vite preview",
-    "start": "vite"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@coreui/coreui": "^5.1.2",
@@ -35,6 +34,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "6.26.2",
     "redux": "^5.0.1",
+    "sass": "^1.79.4",
     "simplebar-react": "^3.2.6"
   },
   "devDependencies": {
@@ -43,13 +43,11 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "postcss": "8.4.47",
-    "prettier": "3.3.3",
-    "sass": "1.79.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
 }
