--- a/package.json
+++ b/package.json
@@ -2,22 +2,42 @@
   "name": "conference-room-booking-management-system",
   "version": "1.0.0",
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/server.ts",
+    "build": "tsc",
+    "dev": "nodemon --watch src --exec ts-node src/server.ts",
+    "start:prod": "node dist/server.js",
+    "prebuild": "rm -rf dist",
+    "postinstall": "npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
+    "inversify": "^6.0.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.13.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/inversify": "^2.0.33",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
+    "@types/pg": "^8.11.10",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "knex": "^3.1.0",
+    "nodemon": "^3.1.7",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
